[UIREDUX-2352] Fix z-index for sales manager dropdown.

--- a/adcolony/less/adcolony-custom.less
+++ b/adcolony/less/adcolony-custom.less
@@ -2264,4 +2264,8 @@ pre.pretty-json {
 
 #sales_manager_filter {
   max-width: 150px;
+
+  .chosen-container {
+    z-index: 10;
+  }
 }
